<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/size">

                <com.google.android.material.textfield.TextInputEditText
                android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desciption">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:id="@+id/save"
                style="@style/default_btn"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/blue_rounded_bg"
                android:text="@string/save"
                android:textColor="@color/white"
                />


            <TextView

                android:id="@+id/cancel"
                style="@style/default_btn"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/red_rounded_bg"
                android:text="@string/cancel"
                android:textColor="@color/white"
                />
        </LinearLayout>

    </ScrollView>
</layout>